# dohod_test_task

./: README.md  evaluate.py  metrics.py  pyproject.toml
